[workspace]
members = [
    "contracts/issuer_registry",
    "contracts/reputation_staking",
    "contracts/sbt_factory",
    "contracts/sbt",
    "packages/interfaces",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Signor1/ethos"
repository = "https://github.com/Signor1/ethos"
keywords = ["arbitrum", "ethereum", "stylus", "soulbound", "reputation"]
description = "Ethos - Decentralized Reputation System with Soulbound Tokens"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true
overflow-checks = false
# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3

[profile.dev]
panic = "abort"

[workspace.dependencies]
stylus-sdk = "0.9.0"
alloy-primitives = "0.8.20"
alloy-sol-types = "0.8.20"
hex = { version = "0.4", default-features = false }

[workspace.dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
stylus-sdk = { version = "0.9.0", features = ["stylus-test"] }
dotenv = "0.15.0"
