[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Signor1/ethos"
repository = "https://github.com/Signor1/ethos"
keywords = ["arbitrum", "ethereum", "stylus", "soulbound", "reputation"]
description = "Shared interfaces and traits for Ethos reputation system contracts"

[dependencies]
stylus-sdk = "0.9.0"
alloy-primitives = "=0.8.20"

[lib]
crate-type = ["lib"]
