[package]
name = "sbt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Signor1/ethos"
repository = "https://github.com/Signor1/ethos"
keywords = ["arbitrum", "ethereum", "stylus", "soulbound", "reputation"]
description = "Soulbound Token (SBT) - Non-transferable ERC-721 implementation"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = "0.9.0"
hex = { version = "0.4", default-features = false }
openzeppelin-stylus = "=0.2.0"

[dev-dependencies]
alloy-primitives = { version = "=0.8.20", features = [
    "sha3-keccak",
    "getrandom",
] }
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
stylus-sdk = { version = "0.9.0", features = ["stylus-test"] }
dotenv = "0.15.0"

[features]
default = ["mini-alloc"]
export-abi = ["openzeppelin-stylus/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "sbt"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = "s"
