[package]
name = "issuer_registry"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Issuer Registry - Manages trusted SBT issuers"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true }
hex = { workspace = true }
interfaces = { path = "../../packages/interfaces" }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
dotenv = { workspace = true }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "issuer_registry"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
